Updated libraries. Changed library used to encode labels. Updated optuna script. Removed usunsed lines in predictive script. Save models data (study, params, model).
WORKS ONLY ON LINUX!!

--- a/EIH_Model.Rmd
+++ b/EIH_Model.Rmd
@@ -41,7 +41,6 @@ library(stringr)
 library(tibble)
 library(dplyr)
 library(tidyr)
-library(superml)
 library(ggplot2)
 library(factoextra)
 library(clusplus)
@@ -49,7 +48,7 @@ library(caret)
 library(gbm)
 library(lightgbm)
 library(fs)
-library(superml)
+library(CatEncoders)
 library(reticulate)
 library(dbscan)
 library(fpc)
