Added FactoMineR library Computed PCA for each subjet and put eigvalues in a dataframe. Added PCA values to predictive analysis.

--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -52,6 +52,7 @@ library(dbscan)
 library(fpc)
 library(FCPS)
 library(shapviz)
+library(FactoMineR)
 ```
 
 ```{r Scripts, echo=FALSE, warning=FALSE, paged.print=TRUE}
