Added automatic folder creation and better parameters management for lightGBM computations.

--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -125,6 +125,7 @@ my_results$my_models_absolute$light_gbm_model_results$light_gbm_confusion$overal
 my_results$my_models_relative$gbm_caret_model_results$gbm_caret_confusion$overall
 my_results$my_models_relative$gbm_model_results$gbm_confusion$overall
 my_results$my_models_relative$light_gbm_model_results$light_gbm_confusion$overall
+my_results$my_models_PCA$light_gbm_model_results$light_gbm_confusion$overall
 ```
 
 # References
